--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,14 +1,14 @@
 <div class="wrap">
   <div
-    class="sidebar"
-    (onOpen)="changeSidebar()"
-    [ngClass]="{ 'sidebar-open': isOpen }"
+    class="sidebar "
+    (onOpen)="changeSidebar($event)"
+    [ngClass]="{ 'is-collapsed-sidebar': isOpen }"
   >
     {{ isOpen | json }}
     <app-sidebar></app-sidebar>
   </div>
 
-  <div class="content" [ngClass]="{ 'sidebar-open-content': isOpen }">
+  <div class="content">
     <router-outlet></router-outlet>
   </div>
 
