--- a/src/app/content/sidebar/sidebar.component.html
+++ b/src/app/content/sidebar/sidebar.component.html
@@ -45,7 +45,11 @@
     </li>
 
     <li class="toggle">
-      <button class="toggle-sidebar sidebar__toggler" (click)="sidebarClick()">
+      <button
+        class="toggle-sidebar sidebar__toggler"
+        type="button"
+        (click)="toggleSidebar('111111111')"
+      >
         <mat-icon class="icon-menu">call_to_action</mat-icon>
         <span>Toggle sidebar</span>
       </button>
