--- a/src/app/content/categories/categories.component.html
+++ b/src/app/content/categories/categories.component.html
@@ -3,7 +3,7 @@
     <h1 class="page-title">Product categories</h1>
     <button class="btn" (click)="editCategory()">Add category</button>
   </div>
-  <div *ngFor="let category of categories; let i = index">
+  <div *ngFor="let category of categories$ | async; let i = index">
     <div
       class="category"
       (click)="categoryClick()"
@@ -16,15 +16,13 @@
       </header>
       <div class="category__body">
         <div class="subcategory-list">
-          <ul class="sortable-list">
-            <!-- *ngFor="let subcategory of subcategories" -->
+          <ul
+            class="sortable-list"
+            *ngFor="let category of categories$ | async"
+          >
             <li class="categories__sortable-list-item sortable-list__item">
-              <!-- {{ subcategory.name }} -->2222
+              <!-- {{ category.subcategories[0].name }} -->222
               <span>13 products</span>
-            </li>
-
-            <li class="categories__sortable-list-item sortable-list__item">
-              2233<span>12 products</span>
             </li>
           </ul>
         </div>
