--- a/src/app/content/categories/categories.component.html
+++ b/src/app/content/categories/categories.component.html
@@ -6,11 +6,9 @@
   <div *ngFor="let category of categories$ | async; let i = index">
     <div
       class="category"
-      (click)="categoryClick()"
-      [ngClass]="{ category_open: !isOpen }"
+      (click)="categoryClick(i)"
+      [ngClass]="{ category_open: isOpen[i] }"
     >
-      <!-- ngClass]="active === i ? 'category_open' : ''" -->
-
       <header class="category__header">
         {{ category.name }}
       </header>
@@ -18,11 +16,11 @@
         <div class="subcategory-list">
           <ul
             class="sortable-list"
-            *ngFor="let category of categories$ | async"
+            *ngFor="let subCategory of category.subCategories"
           >
             <li class="categories__sortable-list-item sortable-list__item">
-              <!-- {{ category.subcategories[0].name }} -->222
-              <span>13 products</span>
+              {{ subCategory.name }}
+              <span>{{ subCategory.productsCount }} products</span>
             </li>
           </ul>
         </div>
