--- a/src/app/content/products/products.component.html
+++ b/src/app/content/products/products.component.html
@@ -38,13 +38,6 @@
           <span>$4000</span>
         </div>
       </div>
-      <div class="form-group">
-        <label class="form-label">Status:</label>
-        <select class="form-control" data-elem="filterStatus">
-          <option value="true" selected="">Enabled</option>
-          <option value="false">Disabled</option>
-        </select>
-      </div>
     </form>
   </div>
   <div
@@ -74,9 +67,6 @@
         <span>Subcategory</span>
       </div>
 
-      <div class="sortable-table__cell ">
-        <span>Status</span>
-      </div>
       <div class="sortable-table__cell "></div>
     </div>
 
@@ -85,26 +75,23 @@
         <div class="sortable-table__cell ">
           <img
             class="sortable-table-image "
-            src="{{ product.images[0]?.url }}"
+            src="{{ (product?.images)[0]?.url }}"
             alt="img"
           />
         </div>
         <div class="sortable-table__cell ">
-          {{ product.name }}
+          {{ product?.name }}
         </div>
         <div class="sortable-table__cell ">
-          <p>{{ product.description }}</p>
+          <p>{{ product?.description }}</p>
         </div>
         <div class="sortable-table__cell ">
-          {{ product.price }}
+          {{ product?.price }}
         </div>
         <div class="sortable-table__cell ">
-          <!-- {{ product.subcategory }} -->111
+          <!-- {{ product.subCategory }} -->
+          Прочее
         </div>
-        <div class="sortable-table__cell ">
-          {{ product.status }}
-        </div>
-
         <div class="sortable-table__cell table__cell_controls">
           <mat-icon class="btn-edit" (click)="editProduct(product)"
             >edit</mat-icon
