Feature: entities, products categories [ref:no-ref]

--- a/src/app/content/categories/categories-dialog/categories-dialog.component.html
+++ b/src/app/content/categories/categories-dialog/categories-dialog.component.html
@@ -1,6 +1,6 @@
 <form [formGroup]="form" class="popup-wrapper">
   <div class="category-form">
-    <h2 class="category-form-title ">Add category</h2>
+    <h2 class="category-form-title ">Edit category</h2>
     <label class="category-form-label">Category name</label>
 
     <input
