--- a/src/app/content/products/products-dialog/products-dialog.component.html
+++ b/src/app/content/products/products-dialog/products-dialog.component.html
@@ -35,7 +35,7 @@
     <label class="product-form-label">Category</label>
 
     <app-categories-list
-      [categories]="categories$ | async"
+      [categories]="categories"
       formControlName="subCategory"
     ></app-categories-list>
 
