--- a/src/styles.sass
+++ b/src/styles.sass
@@ -1846,7 +1846,7 @@ form.form-inline .form-group
         flex-flow: row wrap
         align-items: center
         justify-content: space-between
-        padding: 16px 16px 16px 40px
+        padding: 16px 0px 16px 40px
         position: relative
         cursor: pointer
 
@@ -2007,3 +2007,11 @@ form.form-inline .form-group
                 cursor: pointer
 .active
     color: #007bff
+.subcategory-btn
+    display: flex
+    flex-direction: row
+    justify-content: center
+    align-items: center
+    width: 150px
+    span
+        margin-right: 10px
