--- a/src/app/content/sidebar/sidebar.component.html
+++ b/src/app/content/sidebar/sidebar.component.html
@@ -1,6 +1,6 @@
 <div>
   <h2 class="sidebar-title">
-    <a class="sidebar-title-link" href="#">SHOP ADMIN</a>
+    <a class="sidebar-title-link" href="#">NG-SHOP-ADMIN</a>
   </h2>
   <ul class="sidebar-nav">
     <li>
